[package]
name = "data-from"
description = "Provides the output of utilities structured data."
author = "Tim McNamara <tim@mcnamara.nz>"
version = "0.202408.0"
edition = "2021"

[dependencies]
erased-serde = "0.4.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.204"
serde_json = "1.0.122"
smol_str = { version = "0.2.2", features = ["serde"] }
